--- a/Unity Package Generator/Resources/Runtime.asmdef
+++ b/Unity Package Generator/Resources/Runtime.asmdef
@@ -1,12 +1,14 @@
 {
     "name": "[%CAPITALIZED_PACKAGE_IDENTIFIER%]",
+    "rootNamespace": "[%ROOT_NAMESPACE%]",
     "references": [],
-    "optionalUnityReferences": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": []
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
