--- a/Unity Package Generator/Resources/manifest.json
+++ b/Unity Package Generator/Resources/manifest.json
@@ -1,10 +1,13 @@
 {
     "dependencies": {
         "[%PACKAGE_IDENTIFIER%]": "file:../[%PACKAGE_IDENTIFIER%]",
-        "com.unity.package-manager-ui": "2.1.2",
-        "com.unity.textmeshpro": "2.0.1",
-        "com.unity.timeline": "1.0.0",
+        "com.unity.2d.sprite": "1.0.0",
+        "com.unity.ide.visualstudio": "2.0.5",
+        "com.unity.textmeshpro": "3.0.3",
+        "com.unity.timeline": "1.4.4",
+        "com.unity.ugui": "1.0.0",
         "com.unity.modules.ai": "1.0.0",
+        "com.unity.modules.androidjni": "1.0.0",
         "com.unity.modules.animation": "1.0.0",
         "com.unity.modules.assetbundle": "1.0.0",
         "com.unity.modules.audio": "1.0.0",
@@ -35,4 +38,4 @@
         "com.unity.modules.wind": "1.0.0",
         "com.unity.modules.xr": "1.0.0"
     }
-}
+  }
