[UPD] Handling default readme, root_namespace arg and changed license file extension

--- a/Unity Package Generator/Resources/package.json
+++ b/Unity Package Generator/Resources/package.json
@@ -8,13 +8,8 @@
     ],
     "category": "TBD",
     "dependencies": {},
-    "files": [
-        "/Editor",
-        "/Editor.meta",
-        "/Runtime",
-        "/Runtime.meta",
-        "/Documentation",
-        "/Documentation.meta",
-        "package.json.meta"
-    ]
+    "author": {
+        "name": "David Zamani-Kord",
+        "email": "zamanikord.david@gmail.com"
+    }
 }   
